2006-06-30 Karsten Dambekalns <karsten@typo3.org>

	* t3lib_page: Changed getMultipleGroupsWhereClause() to include a check using IS NULL to make it compatible to Oracle.
	* sysext/adodb/: Update to upstream version 4.90, fixes to connection wizard, some code cleanup (closes: ##3755).
	* t3lib_sqlparser: Clean up indentation a little bit, fix bug #2991, make the parser understand "IS NOT [NULL]" an addition to just "IS [NULL]".

2006-06-29  Ernesto Baschny <ernst@cron-it.de>

	* Fix bug #3522 also in "content (default)": Linking images to hidden pages results in click-enlarge

2006-06-29  Dmitry Dulepov  <typo3@accio.lv>

	* pageNotFound_handling HTTP status fix when external URL is specified as 404 page

2006-06-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fix bug #3391: HTML-Source in error-pages now valid xhtml (FE)

2006-06-28  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug# 3397: FORM submit as image is not valid xhtml
	* Fixed restriction to languages in Frontend editing
	* Fix bugs #3212 & #1178: empty page is displayed when accessing Web>Versioning

2006-06-28 Bernhard Kraft  <kraftb@kraftb.at>

	* Fix bug #3162: Cropscale fails, if one dimension has already the right size (thanks to Stefan Geith)

2006-06-28 Karsten Dambekalns <karsten@typo3.org>

	* t3lib_extfilefunc: func_upload() now logs if no file was uploaded.
	* t3lib_tcemain: Made SQL query in versionizeRecord() conform to DBAL (use OR instead of ||).
	* t3lib_userauthgroup, tx_sv_auth: Made FE group lookups possible when lockToDomain is NULL in DB (e.g. when using Oracle).
	* t3lib/stddb/tables.sql: Changed be_users.lang to VARCHAR instead of CHAR, as MySQL changes it anyway.
	* t3lib_install: Changed an eregi() to a matching preg_match()

2006-06-27 Karsten Dambekalns <karsten@typo3.org>

	* typo3/init.php: Fixed bug #2871.
	* t3lib/class.t3lib_befunc.php: Fixed bug #3106, Documentation of function storeHash differs between class befunc and class page