@@ -1,3 +1,8 @@
+
+2006-06-30  Martin Kutschker  <martin.t.kutschker@blackbox.net>
+
+	* t3lib_htmlmail: auto-detect charset (using FE or BE settings) with manual override
+
 2006-06-30 Karsten Dambekalns <karsten@typo3.org>
 
 	* t3lib_page: Changed getMultipleGroupsWhereClause() to include a check using IS NULL to make it compatible to Oracle.
